cabal-version:      3.0
name:               hs-term-emulator
version:            0.1.0.5
synopsis:           Terminal Emulator written in 100% Haskell
description:        See: https://github.com/bitc/hs-term-emulator#readme
homepage:           https://github.com/bitc/hs-term-emulator
bug-reports:        https://github.com/bitc/hs-term-emulator/issues
license:            MIT
license-file:       LICENSE
author:             Bit Connor
maintainer:         https://github.com/bitc
category:           Terminal
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/bitc/hs-term-emulator.git

library
  -- cabal-fmt: expand src
  exposed-modules:
    System.Terminal.Emulator.Attrs
    System.Terminal.Emulator.DECPrivateMode
    System.Terminal.Emulator.KeyboardInput
    System.Terminal.Emulator.KeyboardInput.KeyPressToPty
    System.Terminal.Emulator.Parsing
    System.Terminal.Emulator.Parsing.Internal
    System.Terminal.Emulator.Parsing.Types
    System.Terminal.Emulator.Term
    System.Terminal.Emulator.Term.Process
    System.Terminal.Emulator.Term.Resize
    System.Terminal.Emulator.TermLines

  build-depends:
    , ansi-terminal  
    , attoparsec    
    , base         
    , bytestring
    , containers   
    , lens         
    , text
    , vector      

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -Werror=incomplete-patterns -Werror=missing-fields

test-suite spec
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs

  -- cabal-fmt: expand test -Spec
  other-modules:
    System.Terminal.Emulator.Parsing.InternalSpec
    System.Terminal.Emulator.Term.ArbitraryTermAtom
    System.Terminal.Emulator.Term.ProcessSpec
    System.Terminal.Emulator.Term.SimpleTerm

  hs-source-dirs:     test
  build-depends:
    , ansi-terminal    
    , attoparsec      
    , base            
    , hs-term-emulator
    , lens           
    , QuickCheck    
    , text
    , vector       
    , hspec       

  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover ==2.*
  other-extensions:   TemplateHaskell
  ghc-options:
    -Wall -threaded -Werror=incomplete-patterns -Werror=missing-fields

benchmark bench
  type:             exitcode-stdio-1.0
  main-is:          Main.hs

  -- cabal-fmt: expand bench -Main
  other-modules:
  hs-source-dirs:   bench
  build-depends:
    , base              >=4.8     && <5
    , criterion         ^>=1.5.9.0
    , hs-term-emulator

  default-language: Haskell2010
  ghc-options:
    -Wall -threaded -Werror=incomplete-patterns -Werror=missing-fields
